lib/ladder.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(expected, found, offset, line, column) {
    function buildMessage(expected, found) {
      function stringEscape(s) {
        function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

        return s
          .replace(/\\/g,   '\\\\')
          .replace(/"/g,    '\\"')
          .replace(/\x08/g, '\\b')
          .replace(/\t/g,   '\\t')
          .replace(/\n/g,   '\\n')
          .replace(/\f/g,   '\\f')
          .replace(/\r/g,   '\\r')
          .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
          .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
          .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
          .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
      }

      var expectedDesc, foundDesc;

      switch (expected.length) {
        case 0:
          expectedDesc = "end of input";
          break;

        case 1:
          expectedDesc = expected[0];
          break;

        default:
          expectedDesc = expected.slice(0, -1).join(", ")
            + " or "
            + expected[expected.length - 1];
      }

      foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

      return "Expected " + expectedDesc + " but " + foundDesc + " found.";
    }

    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
    this.message  = buildMessage(expected, found);
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function() { diag.compute(); return diag; },
        peg$c1 = null,
        peg$c2 = "",
        peg$c3 = [],
        peg$c4 = "title",
        peg$c5 = "\"title\"",
        peg$c6 = function(p) { diag.setTitle(p); },
        peg$c7 = "participant",
        peg$c8 = "\"participant\"",
        peg$c9 = "as",
        peg$c10 = "\"as\"",
        peg$c11 = function(q, w) {
        		diag.parts.add(w, q);
        	},
        peg$c12 = function(w) {
        		diag.parts.add(w);
        	},
        peg$c13 = "advance",
        peg$c14 = "\"advance\"",
        peg$c15 = function(n) { diag.addAdvance(line(), n); },
        peg$c16 = function(tm, from, op, to, msg, opts) {
        	  	diag.addMessage(line(), tm, from, op, to, msg, opts);
        	},
        peg$c17 = "loop",
        peg$c18 = "\"loop\"",
        peg$c19 = function(p) { diag.addLoop(line(), p); },
        peg$c20 = "end",
        peg$c21 = "\"end\"",
        peg$c22 = function() { diag.endBlock(line()); },
        peg$c23 = "set",
        peg$c24 = "\"set\"",
        peg$c25 = function(val) {return val;},
        peg$c26 = function(w, val) { diag.setProp(w, val); },
        peg$c27 = ":",
        peg$c28 = "\":\"",
        peg$c29 = function(w) { return w; },
        peg$c30 = function(nm, t) { return diag.addEndpoint(nm, t); },
        peg$c31 = "@",
        peg$c32 = "\"@\"",
        peg$c33 = function(nw) { return nw; },
        peg$c34 = "true",
        peg$c35 = "\"true\"",
        peg$c36 = function() {return true;},
        peg$c37 = "false",
        peg$c38 = "\"false\"",
        peg$c39 = function() {return false;},
        peg$c40 = /^[^[#\n]/,
        peg$c41 = "[^[#\\n]",
        peg$c42 = function(p) { return p.join(''); },
        peg$c43 = "-",
        peg$c44 = "\"-\"",
        peg$c45 = ">",
        peg$c46 = "\">\"",
        peg$c47 = function(dash, right_arr) { 
        		return new ast.Arrow(null, dash.join(''), right_arr.join('')); 
        	},
        peg$c48 = "<",
        peg$c49 = "\"<\"",
        peg$c50 = function(left_arr, dash, right_arr) { 
        		return new ast.Arrow(left_arr.join(''), dash.join(''), right_arr.join('')); 
        	},
        peg$c51 = "[",
        peg$c52 = "\"[\"",
        peg$c53 = "]",
        peg$c54 = "\"]\"",
        peg$c55 = ",",
        peg$c56 = "\",\"",
        peg$c57 = function(o) {return o;},
        peg$c58 = function(first, follow) { 
        		var opts = {};
        		opts[first[0]] = first[1];
        		for (var i=0; i<follow.length; i++) {
        			opts[follow[i][0]] = follow[i][1];
        		}
        		return opts;
        	},
        peg$c59 = "=",
        peg$c60 = "\"=\"",
        peg$c61 = function(v) {return v;},
        peg$c62 = function(name, val) {
        		return [name, (val === '') ? true : val];
        	},
        peg$c63 = "#",
        peg$c64 = "\"#\"",
        peg$c65 = /^[^\n]/,
        peg$c66 = "[^\\n]",
        peg$c67 = /^[^#"\r\n\t]/,
        peg$c68 = "[^#\"\\r\\n\\t]",
        peg$c69 = function(chars) { 
        		return chars.join(''); 
        	},
        peg$c70 = "\"",
        peg$c71 = "\"\\\"\"",
        peg$c72 = /^[^"]/,
        peg$c73 = "[^\"]",
        peg$c74 = function(info) { return info.join(''); },
        peg$c75 = /^[a-zA-Z0-9_']/,
        peg$c76 = "[a-zA-Z0-9_']",
        peg$c77 = function(chars) { return chars.join('').trim(); },
        peg$c78 = /^[0-9]/,
        peg$c79 = "[0-9]",
        peg$c80 = function(num) { return parseInt(num.join(''), 10); },
        peg$c81 = "required whitespace",
        peg$c82 = /^[ \t]/,
        peg$c83 = "[ \\t]",
        peg$c84 = function() {return " "},
        peg$c85 = "optional whitespace",
        peg$c86 = function() { return " " },
        peg$c87 = "\n",
        peg$c88 = "\"\\n\"",

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$cleanupExpected(expected) {
      var i = 0;

      expected.sort();

      while (i < expected.length) {
        if (expected[i - 1] === expected[i]) {
          expected.splice(i, 1);
        } else {
          i++;
        }
      }
    }

    function peg$parsestart() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseactions();
      if (s1 !== null) {
        peg$reportedPos = s0;
        s1 = peg$c0();
      }
      if (s1 === null) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }

      return s0;
    }

    function peg$parseactions() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== null) {
        s2 = peg$parseact_comment();
        if (s2 === null) {
          s2 = peg$c2;
        }
        if (s2 !== null) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseeol();
          if (s5 !== null) {
            s6 = peg$parse_();
            if (s6 !== null) {
              s7 = peg$parseact_comment();
              if (s7 !== null) {
                s5 = [s5, s6, s7];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c1;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c1;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c1;
          }
          while (s4 !== null) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseeol();
            if (s5 !== null) {
              s6 = peg$parse_();
              if (s6 !== null) {
                s7 = peg$parseact_comment();
                if (s7 !== null) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c1;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c1;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c1;
            }
          }
          if (s3 !== null) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseact_comment() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseaction();
      if (s1 !== null) {
        s2 = peg$parse_();
        if (s2 !== null) {
          s3 = peg$parsecomment();
          if (s3 === null) {
            s3 = peg$c2;
          }
          if (s3 !== null) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseaction() {
      var s0;

      s0 = peg$parsetitle();
      if (s0 === null) {
        s0 = peg$parseparticipant();
        if (s0 === null) {
          s0 = peg$parseadvance();
          if (s0 === null) {
            s0 = peg$parseset();
            if (s0 === null) {
              s0 = peg$parseloop();
              if (s0 === null) {
                s0 = peg$parseend();
                if (s0 === null) {
                  s0 = peg$parsesend();
                  if (s0 === null) {
                    s0 = peg$parsecomment();
                    if (s0 === null) {
                      s0 = peg$parse_();
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsetitle() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 5;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== null) {
        s2 = peg$parseWS();
        if (s2 !== null) {
          s3 = peg$parseto_the_end();
          if (s3 !== null) {
            peg$reportedPos = s0;
            s1 = peg$c6(s3);
            if (s1 === null) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseparticipant() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 11) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 11;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== null) {
        s2 = peg$parseWS();
        if (s2 !== null) {
          s3 = peg$parseqphrase();
          if (s3 !== null) {
            s4 = peg$parseWS();
            if (s4 !== null) {
              if (input.substr(peg$currPos, 2) === peg$c9) {
                s5 = peg$c9;
                peg$currPos += 2;
              } else {
                s5 = null;
                if (peg$silentFails === 0) { peg$fail(peg$c10); }
              }
              if (s5 !== null) {
                s6 = peg$parseWS();
                if (s6 !== null) {
                  s7 = peg$parseword();
                  if (s7 !== null) {
                    peg$reportedPos = s0;
                    s1 = peg$c11(s3,s7);
                    if (s1 === null) {
                      peg$currPos = s0;
                      s0 = s1;
                    } else {
                      s0 = s1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      if (s0 === null) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 11) === peg$c7) {
          s1 = peg$c7;
          peg$currPos += 11;
        } else {
          s1 = null;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s1 !== null) {
          s2 = peg$parseWS();
          if (s2 !== null) {
            s3 = peg$parseword();
            if (s3 !== null) {
              peg$reportedPos = s0;
              s1 = peg$c12(s3);
              if (s1 === null) {
                peg$currPos = s0;
                s0 = s1;
              } else {
                s0 = s1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      }

      return s0;
    }

    function peg$parseadvance() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c13) {
        s1 = peg$c13;
        peg$currPos += 7;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== null) {
        s2 = peg$parseWS();
        if (s2 !== null) {
          s3 = peg$parsenumber();
          if (s3 !== null) {
            peg$reportedPos = s0;
            s1 = peg$c15(s3);
            if (s1 === null) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsesend() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

      s0 = peg$currPos;
      s1 = peg$parsetimepoint();
      if (s1 === null) {
        s1 = peg$c2;
      }
      if (s1 !== null) {
        s2 = peg$parse_();
        if (s2 !== null) {
          s3 = peg$parseendpoint();
          if (s3 !== null) {
            s4 = peg$parse_();
            if (s4 !== null) {
              s5 = peg$parsearrow();
              if (s5 !== null) {
                s6 = peg$parse_();
                if (s6 !== null) {
                  s7 = peg$parseendpoint();
                  if (s7 !== null) {
                    s8 = peg$parse_();
                    if (s8 !== null) {
                      s9 = peg$parsemessage();
                      if (s9 === null) {
                        s9 = peg$c2;
                      }
                      if (s9 !== null) {
                        s10 = peg$parse_();
                        if (s10 !== null) {
                          s11 = peg$parseoptions();
                          if (s11 === null) {
                            s11 = peg$c2;
                          }
                          if (s11 !== null) {
                            peg$reportedPos = s0;
                            s1 = peg$c16(s1,s3,s5,s7,s9,s11);
                            if (s1 === null) {
                              peg$currPos = s0;
                              s0 = s1;
                            } else {
                              s0 = s1;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$c1;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseloop() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c17) {
        s1 = peg$c17;
        peg$currPos += 4;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s1 !== null) {
        s2 = peg$parseWS();
        if (s2 !== null) {
          s3 = peg$parseto_the_end();
          if (s3 !== null) {
            peg$reportedPos = s0;
            s1 = peg$c19(s3);
            if (s1 === null) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseend() {
      var s0, s1;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c20) {
        s1 = peg$c20;
        peg$currPos += 3;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s1 !== null) {
        peg$reportedPos = s0;
        s1 = peg$c22();
      }
      if (s1 === null) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }

      return s0;
    }

    function peg$parseset() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c23) {
        s1 = peg$c23;
        peg$currPos += 3;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }
      if (s1 !== null) {
        s2 = peg$parseWS();
        if (s2 !== null) {
          s3 = peg$parseword();
          if (s3 !== null) {
            s4 = peg$currPos;
            s5 = peg$parseWS();
            if (s5 !== null) {
              s6 = peg$parsevalue();
              if (s6 !== null) {
                peg$reportedPos = s4;
                s5 = peg$c25(s6);
                if (s5 === null) {
                  peg$currPos = s4;
                  s4 = s5;
                } else {
                  s4 = s5;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c1;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c1;
            }
            if (s4 === null) {
              s4 = peg$c2;
            }
            if (s4 !== null) {
              peg$reportedPos = s0;
              s1 = peg$c26(s3,s4);
              if (s1 === null) {
                peg$currPos = s0;
                s0 = s1;
              } else {
                s0 = s1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsetimepoint() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseword();
      if (s1 !== null) {
        s2 = peg$parse_();
        if (s2 !== null) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c27;
            peg$currPos++;
          } else {
            s3 = null;
            if (peg$silentFails === 0) { peg$fail(peg$c28); }
          }
          if (s3 !== null) {
            peg$reportedPos = s0;
            s1 = peg$c29(s1);
            if (s1 === null) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseendpoint() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseword();
      if (s1 !== null) {
        s2 = peg$parsetarget_time();
        if (s2 === null) {
          s2 = peg$c2;
        }
        if (s2 !== null) {
          peg$reportedPos = s0;
          s1 = peg$c30(s1,s2);
          if (s1 === null) {
            peg$currPos = s0;
            s0 = s1;
          } else {
            s0 = s1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsetarget_time() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 64) {
        s1 = peg$c31;
        peg$currPos++;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c32); }
      }
      if (s1 !== null) {
        s2 = peg$parsenumber_or_word();
        if (s2 !== null) {
          peg$reportedPos = s0;
          s1 = peg$c33(s2);
          if (s1 === null) {
            peg$currPos = s0;
            s0 = s1;
          } else {
            s0 = s1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsenumber_or_word() {
      var s0;

      s0 = peg$parsenumber();
      if (s0 === null) {
        s0 = peg$parseword();
      }

      return s0;
    }

    function peg$parsebool_number_or_word() {
      var s0;

      s0 = peg$parsebool();
      if (s0 === null) {
        s0 = peg$parsenumber();
        if (s0 === null) {
          s0 = peg$parseword();
        }
      }

      return s0;
    }

    function peg$parsevalue() {
      var s0;

      s0 = peg$parsequoted();
      if (s0 === null) {
        s0 = peg$parsebool();
        if (s0 === null) {
          s0 = peg$parsenumber();
          if (s0 === null) {
            s0 = peg$parseword();
          }
        }
      }

      return s0;
    }

    function peg$parsebool() {
      var s0, s1;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c34) {
        s1 = peg$c34;
        peg$currPos += 4;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c35); }
      }
      if (s1 !== null) {
        peg$reportedPos = s0;
        s1 = peg$c36();
      }
      if (s1 === null) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }
      if (s0 === null) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 5) === peg$c37) {
          s1 = peg$c37;
          peg$currPos += 5;
        } else {
          s1 = null;
          if (peg$silentFails === 0) { peg$fail(peg$c38); }
        }
        if (s1 !== null) {
          peg$reportedPos = s0;
          s1 = peg$c39();
        }
        if (s1 === null) {
          peg$currPos = s0;
          s0 = s1;
        } else {
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parsemessage() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 58) {
        s1 = peg$c27;
        peg$currPos++;
      } else {
        s1 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s1 !== null) {
        s2 = peg$parse_();
        if (s2 !== null) {
          s3 = [];
          if (peg$c40.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = null;
            if (peg$silentFails === 0) { peg$fail(peg$c41); }
          }
          while (s4 !== null) {
            s3.push(s4);
            if (peg$c40.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = null;
              if (peg$silentFails === 0) { peg$fail(peg$c41); }
            }
          }
          if (s3 !== null) {
            peg$reportedPos = s0;
            s1 = peg$c42(s3);
            if (s1 === null) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsearrow() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 45) {
        s2 = peg$c43;
        peg$currPos++;
      } else {
        s2 = null;
        if (peg$silentFails === 0) { peg$fail(peg$c44); }
      }
      if (s2 !== null) {
        if (input.charCodeAt(peg$currPos) === 45) {
          s3 = peg$c43;
          peg$currPos++;
        } else {
          s3 = null;
          if (peg$silentFails === 0) { peg$fail(peg$c44); }
        }
        if (s3 === null) {
          s3 = peg$c2;
        }
        if (s3 !== null) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c1;
      }
      if (s1 !== null) {
        s2 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 62) {
          s3 = peg$c45;
          peg$currPos++;
        } else {
          s3 = null;
          if (peg$silentFails === 0) { peg$fail(peg$c46); }
        }
        if (s3 !== null) {
          if (input.charCodeAt(peg$currPos) === 62) {
            s4 = peg$c45;
            peg$currPos++;
          } else {
            s4 = null;
            if (peg$silentFails === 0) { peg$fail(peg$c46); }
          }
          if (s4 === null) {
            s4 = peg$c2;
          }
          if (s4 !== null) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c1;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== null) {
          peg$reportedPos = s0;
          s1 = peg$c47(s1,s2);
          if (s1 === null) {
            peg$currPos = s0;
            s0 = s1;
          } else {
            s0 = s1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      if (s0 === null) {
        s0 = peg$currPos;
        s1 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 60) {
          s2 = peg$c48;
          peg$currPos++;
        } else {
          s2 = null;
          if (peg$silentFails === 0) { peg$fail(peg$c49); }
        }
        if (s2 !== null) {
          if (input.charCodeAt(peg$currPos) === 60) {
            s3 = peg$c48;
            peg$currPos++;
          } else {
            s3 = null;
            if (peg$silentFails === 0) { peg$fail(peg$c49); }
          }
          if (s3 === null) {
            s3 = peg$c2;
          }
          if (s3 !== null) {
            s2 = [s2, s3];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c1;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c1;
        }
        if (s1 !== null) {
          s2 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 45) {
            s3 = peg$c43;
            peg$currPos++;
          } else {
            s3 = null;
            if (peg$silentFails === 0) { peg$fail(peg$c44); }
          }
          if (s3 !== null) {
            if (input.charCodeAt(peg$currPos) === 45) {
              s4 = peg$c43;
              peg$currPos++;
            } else {
              s4 = null;
              if (peg$silentFails === 0) { peg$fail(peg$c44); }
            }
            if (s4 === null) {
              s4 = peg$c2;
            }
            if (s4 !== null) {
              s3 = [s3, s4];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c1;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c1;
          }
          if (s2 !== null) {
            s3 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 62) {
              s4 = peg$c45;
              peg$currPos++;
            } else {
              s4 = null;
              if (peg$silentFails === 0) { peg$fail(peg$c46); }
            }
            if (s4 !== null) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s5 = peg$c45;
                peg$currPos++;
              } else {
                s5 = null;
                if (peg$silentFails === 0) { peg$fail(peg$c46); }
              }
              if (s5 === null) {
                s5 = peg$c2;
              }
              if (s5 !== null) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$c1;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c1;
            }
            if (s3 !== null) {
              peg$reportedPos = s0;
              s1 = peg$c50(s1,s2,s3);
              if (s1 === null) {
                peg$currPos = s0;
                s0 = s1;
              } else {
                s0 = s1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      }

      return s0;
    }

    function peg$parseoptions() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
